--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "apollo-server": "^3.10.2",
+    "dotenv": "^16.0.2",
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.18.0",
     "nexus": "^1.3.0"
