--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "prisma": "^4.3.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.8.3"
   },
   "dependencies": {
+    "@prisma/client": "^4.3.1",
     "apollo-server": "^3.10.2",
     "dotenv": "^16.0.2",
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.18.0",
-    "nexus": "^1.3.0"
+    "nexus": "^1.3.0",
+    "ts-node": "^10.9.1"
   }
 }
