--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.5.9",
     "prisma": "^4.6.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.8.3"
@@ -19,9 +21,11 @@
   "dependencies": {
     "@prisma/client": "^4.6.0",
     "apollo-server": "^3.10.2",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.2",
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.18.0",
+    "jsonwebtoken": "^8.5.1",
     "nexus": "^1.3.0",
     "ts-node": "^10.9.1"
   }
